{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 64,
  "lineage": "53aa2c1e-4920-825a-33b7-7681c3e522ff",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "gitlab_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/gitlab-nic",
            "internal_domain_name_suffix": "3fxtlxirzejufgaomipd45013h.phxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/gitlab-ip",
                "subnet_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
              }
            ],
            "location": "westus3",
            "mac_address": "60-45-BD-C7-7C-64",
            "name": "gitlab-nic",
            "private_ip_address": "10.0.0.7",
            "private_ip_addresses": [
              "10.0.0.7"
            ],
            "resource_group_name": "projet-final-groupe-3",
            "virtual_machine_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Compute/virtualMachines/gitlab"
          },
          "dependencies": [
            "azurerm_public_ip.gitlab_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "iscsi_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/iscsi-nic",
            "internal_domain_name_suffix": "3fxtlxirzejufgaomipd45013h.phxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/iscsi-ip",
                "subnet_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
              }
            ],
            "location": "westus3",
            "mac_address": "60-45-BD-C9-E8-69",
            "name": "iscsi-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "projet-final-groupe-3",
            "virtual_machine_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Compute/virtualMachines/iscsi"
          },
          "dependencies": [
            "azurerm_public_ip.iscsi_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "k8s_main_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/k8s-main-nic",
            "internal_domain_name_suffix": "3fxtlxirzejufgaomipd45013h.phxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/k8s-main-ip",
                "subnet_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
              }
            ],
            "location": "westus3",
            "mac_address": "60-45-BD-C9-EA-A6",
            "name": "k8s-main-nic",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "projet-final-groupe-3",
            "virtual_machine_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Compute/virtualMachines/k8s-main"
          },
          "dependencies": [
            "azurerm_public_ip.k8s_main_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "k8s_worker_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/k8s-worker-nic",
            "internal_domain_name_suffix": "3fxtlxirzejufgaomipd45013h.phxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/k8s-worker-ip",
                "subnet_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet"
              }
            ],
            "location": "westus3",
            "mac_address": "60-45-BD-C9-85-8C",
            "name": "k8s-worker-nic",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "projet-final-groupe-3",
            "virtual_machine_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/PROJET-FINAL-GROUPE-3/providers/Microsoft.Compute/virtualMachines/k8s-worker"
          },
          "dependencies": [
            "azurerm_public_ip.k8s_worker_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "gitlab_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/gitlab-nic|/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/gitlab-nsg",
            "network_interface_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/gitlab-nic",
            "network_security_group_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/gitlab-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.gitlab_nic",
            "azurerm_network_security_group.gitlab_nsg",
            "azurerm_public_ip.gitlab_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "iscsi_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/iscsi-nic|/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/iscsi-nsg",
            "network_interface_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/iscsi-nic",
            "network_security_group_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/iscsi-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.iscsi_nic",
            "azurerm_network_security_group.iscsi_nsg",
            "azurerm_public_ip.iscsi_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "k8s_main_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/k8s-main-nic|/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg",
            "network_interface_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/k8s-main-nic",
            "network_security_group_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.k8s_main_nic",
            "azurerm_network_security_group.k8s_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "k8s_worker_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/k8s-worker-nic|/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg",
            "network_interface_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkInterfaces/k8s-worker-nic",
            "network_security_group_id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.k8s_worker_nic",
            "azurerm_network_security_group.k8s_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "gitlab_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/gitlab-nsg",
            "location": "westus3",
            "name": "gitlab-nsg",
            "resource_group_name": "projet-final-groupe-3",
            "security_rule": [
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1022",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-GitLab",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-Machine",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5050",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "GitLab-Docker",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "iscsi_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/iscsi-nsg",
            "location": "westus3",
            "name": "iscsi-nsg",
            "resource_group_name": "projet-final-groupe-3",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3260",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "iSCSI-2",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "860",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "iSCSI-1",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "k8s_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/networkSecurityGroups/k8s-nsg",
            "location": "westus3",
            "name": "k8s-nsg",
            "resource_group_name": "projet-final-groupe-3",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ICMP",
                "priority": 1005,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10250",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8S-2",
                "priority": 1008,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10250",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8S-5",
                "priority": 1011,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10257",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8S-4",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10259",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8S-3",
                "priority": 1009,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2379-2380",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8S-1",
                "priority": 1007,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "30000-32767",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8S-6",
                "priority": 1012,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "K8S-Admin",
                "priority": 1006,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gitlab_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "gitlab-ce",
            "fqdn": "gitlab-ce.westus3.cloudapp.azure.com",
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/gitlab-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.163.46.12",
            "ip_version": "IPv4",
            "location": "westus3",
            "name": "gitlab-ip",
            "resource_group_name": "projet-final-groupe-3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "iscsi_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/iscsi-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.150.144.43",
            "ip_version": "IPv4",
            "location": "westus3",
            "name": "iscsi-ip",
            "resource_group_name": "projet-final-groupe-3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "k8s_main_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/k8s-main-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.163.46.6",
            "ip_version": "IPv4",
            "location": "westus3",
            "name": "k8s-main-ip",
            "resource_group_name": "projet-final-groupe-3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "k8s_worker_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/k8s-worker-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.163.91.165",
            "ip_version": "IPv4",
            "location": "westus3",
            "name": "k8s-worker-ip",
            "resource_group_name": "projet-final-groupe-3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpn_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "final-groupe3",
            "fqdn": "final-groupe3.westus3.cloudapp.azure.com",
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/publicIPAddresses/vpn-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus3",
            "name": "vpn-ip",
            "resource_group_name": "projet-final-groupe-3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "projet-final-groupe-3",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet",
            "name": "subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "projet-final-groupe-3",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dd356fe9-c911-4213-980e-621e3f7f5bef",
            "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "westus3",
            "name": "vnet",
            "resource_group_name": "projet-final-groupe-3",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet/subnets/subnet",
                "name": "subnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/e199b595-d2e9-4487-ab34-dcb62c67c71d/resourceGroups/projet-final-groupe-3/providers/Microsoft.Network/virtualNetworks/vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}